# randomstuff

./: Cargo.toml  README.md
src/: aoc.rs  main.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  mod.rs
