[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Vasyl Purchel <vasyl.purchel@gmail.com>"]
licence = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
serde = { version = "1.0.215", features = ["derive"] }
